Explicitly set font weight of warning-text
Explicitly set the font-weight of the warning text component, and move the font styles to the __text element (the __icon element has its own size, weight and colour)

Warning text is otherwise only bold because of the user-agent styling of <strong> elements. When used with GOV.UK Elements, which includes a reset stylesheet, the font-weight is reset to normal, which means the warning text is currently set in a normal weight.

--- a/src/govuk/components/warning-text/_warning-text.scss
+++ b/src/govuk/components/warning-text/_warning-text.scss
@@ -5,9 +5,6 @@
 @include govuk-exports("govuk/component/warning-text") {
 
   .govuk-warning-text {
-    @include govuk-font($size: 19);
-    @include govuk-text-colour;
-
     position: relative;
     @include govuk-responsive-margin(6, "bottom");
     padding: govuk-spacing(2) 0;
@@ -50,6 +47,8 @@
   }
 
   .govuk-warning-text__text {
+    @include govuk-font($size: 19, $weight: bold);
+    @include govuk-text-colour;
     display: block;
     padding-left: 50px;
   }
