--- a/src/govuk/components/summary-list/template.njk
+++ b/src/govuk/components/summary-list/template.njk
@@ -1,8 +1,10 @@
 {%- macro _actionLink(action) %}
   <a class="govuk-link {%- if action.classes %} {{ action.classes }}{% endif %}" href="{{ action.href }}" {%- for attribute, value in action.attributes %} {{attribute}}="{{value}}"{% endfor %}>
-    {{ action.html | safe if action.html else action.text }}
+    {% set actionText = action.html | safe if action.html else action.text %}
     {%- if action.visuallyHiddenText -%}
-      <span class="govuk-visually-hidden"> {{ action.visuallyHiddenText }}</span>
+      <span aria-hidden="true">{{ actionText }}</span><span class="govuk-visually-hidden"> {{ action.visuallyHiddenText }}</span>
+    {%- else -%}
+      {{ actionText }}
     {% endif -%}
   </a>
 {% endmacro -%}
