--- a/app/views/layouts/legacy.njk
+++ b/app/views/layouts/legacy.njk
@@ -4,6 +4,8 @@
 {% set homepage_url = "/" %}
 {% block page_title %}{{ "Error: " if errors }}{{ page_title }} - GOV.UK{% endblock %}
 
+{% block cookie_message %}<p>GOV.UK uses cookies to make the site simpler. <a href="https://www.gov.uk/help/cookies">Find out more about cookies</a></p>{% endblock %}
+
 {% block head %}
   <!--[if !IE 8]><!-->
     <link rel="stylesheet" href="/public/app-legacy.css">
@@ -11,6 +13,10 @@
   <!--[if IE 8]>
     <link rel="stylesheet" href="/public/app-legacy-ie8.css">
   <![endif]-->
+{% endblock %}
+
+{% block body_start %}
+  {% include "../partials/banner.njk" %}
 {% endblock %}
 
 {% block body_end %}
