Add banner to announcements example
Because this defines its own header, we need to include the banner there.

--- a/app/views/full-page-examples/announcements/index.njk
+++ b/app/views/full-page-examples/announcements/index.njk
@@ -11,6 +11,7 @@ notes: Based on https://www.gov.uk/government/news/strictly-vampires-and-sausage
 {% block pageTitle %}{{ pageTitle }} - GOV.UK{% endblock %}
 
 {% block header %}
+{% include "../../partials/banner.njk" %}
 {{ govukHeader({
   navigation: [
     {
