Revert "Update hex value for secondary text to improve contrast"
This reverts commit d1a1695c42cd88019bc3675815e3b82a4109d6ff.

--- a/src/govuk/settings/_colours-palette.scss
+++ b/src/govuk/settings/_colours-palette.scss
@@ -70,7 +70,7 @@ $_govuk-colour-palette-modern: (
   "purple": #4c2c92,
 
   "black": #0b0c0c,
-  "dark-grey": #626a6e,
+  "dark-grey": #6f777b,
   "mid-grey": #b1b4b6,
   "light-grey": #f3f2f1,
   "white": #ffffff,
