--- a/src/govuk/components/details/template.njk
+++ b/src/govuk/components/details/template.njk
@@ -5,6 +5,10 @@
     </span>
   </summary>
   <div class="govuk-details__text">
-    {{ params.html | safe if params.html else params.text }}
+  {% if params.html %}
+    {{ params.html | safe }}
+  {% else %}
+    <p class="govuk-body">{{ params.text }}</p>
+  {% endif %}
   </div>
 </details>
