--- a/src/govuk/components/warning-text/template.njk
+++ b/src/govuk/components/warning-text/template.njk
@@ -2,8 +2,10 @@
   {%- for attribute, value in params.attributes %} {{attribute}}="{{value}}"{% endfor -%}
   >
   <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-  <strong class="govuk-warning-text__text">
-    <span class="govuk-warning-text__assistive">{{ params.iconFallbackText }}</span>
-    {{ params.html | safe if params.html else params.text }}
-  </strong>
+  <p class="govuk-warning-text__text govuk-body">
+    <strong>
+      <span class="govuk-warning-text__assistive">{{ params.iconFallbackText }}</span>
+      {{ params.html | safe if params.html else params.text }}
+    </strong>
+  </p>
 </div>
