--- a/src/govuk/components/inset-text/template.njk
+++ b/src/govuk/components/inset-text/template.njk
@@ -1,4 +1,8 @@
 <div {%- if params.id %} id="{{ params.id }}"{% endif %} class="govuk-inset-text {%- if params.classes %} {{ params.classes }}{% endif %}"
 {%- for attribute, value in params.attributes %} {{attribute}}="{{value}}"{% endfor %}>
-  {{ params.html | safe if params.html else params.text }}
+{% if params.html %}
+  {{ params.html | safe }}
+{% else %}
+  <p class="govuk-body">{{ params.text }}</p>
+{% endif %}
 </div>
