--- a/src/govuk/components/panel/_panel.scss
+++ b/src/govuk/components/panel/_panel.scss
@@ -41,4 +41,14 @@
     @include govuk-font($size: 36);
   }
 
+  .govuk-panel__body p {
+    color: inherit;
+    font-size: inherit;
+    font-weight: inherit;
+  }
+
+  .govuk-panel__body > :last-child {
+    margin-bottom: 0;
+  }
+
 }
