Allow the opengraph image path to be customised
This allows the user to do one of the following options:
1. Set the entire absolute url eg. https://domain.com/my-images/article-image-2019.png
2. Set only the domain url https://domain.com, which gets combined
with 'images/govuk-opengraph-image.png'
3. Setting assetPath to an absolute URL which cascades to `assetUrl` and is combined
with ‘'images/govuk-opengraph-image.png’

--- a/src/govuk/template.njk
+++ b/src/govuk/template.njk
@@ -25,7 +25,8 @@
     {% block head %}{% endblock %}
     {# The default og:image is added below head so that scrapers see any custom metatags first, and this is just a fallback #}
     {# image url needs to be absolute e.g. http://wwww.domain.com/.../govuk-opengraph-image.png #}
-    <meta property="og:image" content="{{ assetUrl | default('/assets') }}/images/govuk-opengraph-image.png">
+    <meta property="og:image" content="{{ assetUrl | default('/assets') }}/{{ opengraphImagePath | default('images/govuk-opengraph-image.png') }}">
+
   </head>
   <body class="govuk-template__body {{ bodyClasses }}">
     <script>document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');</script>
