Allow classes to be set on template container
This is necessary for setting custom width classes to override
`.govuk-width-container`.

Follow the naming of header and footer which have `containerClasses` which
are "Classes that can be added to the inner container, useful if you want to
make the header/footer full width."

--- a/src/govuk/template.njk
+++ b/src/govuk/template.njk
@@ -43,7 +43,7 @@
     {% endblock %}
 
     {% block main %}
-      <div class="govuk-width-container">
+      <div class="govuk-width-container {{ containerClasses }}">
         {% block beforeContent %}{% endblock %}
         <main class="govuk-main-wrapper {{ mainClasses }}" id="main-content" role="main"{% if mainLang %} lang="{{ mainLang }}"{% endif %}>
           {% block content %}{% endblock %}
