Add an example of creating a custom page width
Set it on the template, header and footer containers.

I’ve used BEM for the custom class name as it feels clearer and in the spirit of
what this is doing (creating something based on the default width class), although
actually nothing is being inherited from `.govuk-width-container`.

There’s a difference in how the header and footer treat `.govuk-width-container`:
footer hardcodes the class whereas header overrides it with `containerClasses`. As
nothing is being inherited from `.govuk-width-container` don't pass it again
unnecessarily, only `.govuk-width-container—wide`.

--- a/app/assets/scss/partials/_app.scss
+++ b/app/assets/scss/partials/_app.scss
@@ -2,6 +2,10 @@
   background-color: $govuk-body-background-colour;
 }
 
+.app-width-container--wide {
+  @include govuk-width-container(1200px);
+}
+
 .app-iframe-in-component-preview {
   margin: 15px 0;
 }
