--- a/src/govuk/components/radios/_radios.scss
+++ b/src/govuk/components/radios/_radios.scss
@@ -147,7 +147,7 @@
   // =========================================================
 
   .govuk-radios--inline {
-    @include mq ($from: tablet) {
+    @include govuk-media-query ($from: tablet) {
       @include govuk-clearfix;
 
       .govuk-radios__item {
