--- a/src/govuk/components/label/template.njk
+++ b/src/govuk/components/label/template.njk
@@ -1,7 +1,7 @@
 {% if params.html or params.text %}
 {% set labelHtml %}
 <label class="govuk-label{%- if params.classes %} {{ params.classes }}{% endif %}"
-  {%- for attribute, value in params.attributes %} {{attribute}}="{{value}}"{% endfor %}
+  {%- for attribute, value in params.attributes %} {{ attribute }}{% if value %}="{{ value }}"{% endif %}{% endfor %}
   {%- if params.for %} for="{{ params.for }}"{% endif %}>
   {{ params.html | safe if params.html else params.text }}
 </label>
