Add modal dialogue component

--- a/src/govuk/components/_all.scss
+++ b/src/govuk/components/_all.scss
@@ -17,6 +17,7 @@
 @import "input/input";
 @import "inset-text/inset-text";
 @import "label/label";
+@import "modal-dialogue/modal-dialogue";
 @import "panel/panel";
 @import "phase-banner/phase-banner";
 @import "tabs/tabs";
