Fix feedback bar wrapping
Closes #114.

--- a/src/components/_custom/feedbackbar/template.njk
+++ b/src/components/_custom/feedbackbar/template.njk
@@ -4,7 +4,7 @@
       <div class="sdn-feedbackbar__useful">
         <div id="sdn-feedbackbar-useful">
           <span class="sdn-feedbackbar__useful-question">Boli tieto informácie pre vás užitočné?</span>
-          <span>
+          <span class="govuk-!-display-inline-block">
             <span class="sdn-feedbackbar__yes" data-module="sdn-appear-link" data-appear="sdn-feedbackbar-thanks" data-disappear="sdn-feedbackbar-useful">
               <a href="#" class="sdn-feedbackbar__link">Áno</a>
             </span>
