Import components without re-importing base layers
We currently import the settings, tools and helpers layers within each component so that users can import just a single component (e.g. `@import govuk/components/button/button`) and it'll import its own dependencies.

However, Ruby Sass in particular is slow to resolve these imports, and so when importing `govuk/all`, the fact that every component imports the dependencies again has a big impact on the compilation time.

By moving everything except the imports into a separate file (`_style.scss`) and including that in the original component .scss file, we can then import just the styles when importing all and shortcut all of the imports.

--- a/src/govuk/components/_all.scss
+++ b/src/govuk/components/_all.scss
@@ -1,29 +1,29 @@
-@import "accordion/accordion";
-@import "back-link/back-link";
-@import "breadcrumbs/breadcrumbs";
-@import "button/button";
-@import "checkboxes/checkboxes";
-@import "character-count/character-count";
-@import "summary-list/summary-list";
-@import "date-input/date-input";
-@import "details/details";
-@import "error-message/error-message";
-@import "error-summary/error-summary";
-@import "fieldset/fieldset";
-@import "file-upload/file-upload";
-@import "footer/footer";
-@import "hint/hint";
-@import "header/header";
-@import "input/input";
-@import "inset-text/inset-text";
-@import "label/label";
-@import "panel/panel";
-@import "phase-banner/phase-banner";
-@import "tabs/tabs";
-@import "tag/tag";
-@import "radios/radios";
-@import "select/select";
-@import "skip-link/skip-link";
-@import "table/table";
-@import "textarea/textarea";
-@import "warning-text/warning-text";
+@import "accordion/style";
+@import "back-link/style";
+@import "breadcrumbs/style";
+@import "button/style";
+@import "checkboxes/style";
+@import "character-count/style";
+@import "summary-list/style";
+@import "date-input/style";
+@import "details/style";
+@import "error-message/style";
+@import "error-summary/style";
+@import "fieldset/style";
+@import "file-upload/style";
+@import "footer/style";
+@import "hint/style";
+@import "header/style";
+@import "input/style";
+@import "inset-text/style";
+@import "label/style";
+@import "panel/style";
+@import "phase-banner/style";
+@import "tabs/style";
+@import "tag/style";
+@import "radios/style";
+@import "select/style";
+@import "skip-link/style";
+@import "table/style";
+@import "textarea/style";
+@import "warning-text/style";
