[SPIKE] Remove reliance on global js-enabled class
This also prevents components from being initialised more than once.

--- a/src/govuk/components/accordion/_accordion.scss
+++ b/src/govuk/components/accordion/_accordion.scss
@@ -47,12 +47,10 @@
   }
 
   // JavaScript enabled
-  .js-enabled {
+  .govuk-accordion--js-enabled {
 
-    .govuk-accordion {
-      // Border at the bottom of the whole accordion
-      border-bottom: 1px solid $govuk-border-colour;
-    }
+    // Border at the bottom of the whole accordion
+    border-bottom: 1px solid $govuk-border-colour;
 
     // Borders between accordion sections
     .govuk-accordion__section {
