--- a/src/govuk/components/radios/_radios.scss
+++ b/src/govuk/components/radios/_radios.scss
@@ -199,7 +199,7 @@
     padding-left: $conditional-padding-left;
     border-left: $conditional-border-width solid $govuk-border-colour;
 
-    .js-enabled &--hidden {
+    .govuk-radios--js-enabled &--hidden {
       display: none;
     }
 
