--- a/src/govuk/helpers/_spacing.scss
+++ b/src/govuk/helpers/_spacing.scss
@@ -20,9 +20,10 @@
 @function govuk-spacing($spacing-point) {
 
   $actual-input-type: type-of($spacing-point);
+
   @if $actual-input-type != "number" {
     @error "Expected a number (integer), but got a "
-    + "#{$actual-input-type}.";
+      + "#{$actual-input-type}.";
   }
 
   @if not map-has-key($govuk-spacing-points, $spacing-point) {
@@ -54,43 +55,49 @@
 @mixin _govuk-responsive-spacing($responsive-spacing-point, $property, $direction: "all", $important: false, $adjustment: false) {
 
   $actual-input-type: type-of($responsive-spacing-point);
+
   @if $actual-input-type != "number" {
     @error "Expected a number (integer), but got a " + "#{$actual-input-type}.";
   }
 
   @if not map-has-key($govuk-spacing-responsive-scale, $responsive-spacing-point) {
     @error "Unknown spacing point `#{$responsive-spacing-point}`. Make sure you are using a point from the "
-    + "responsive spacing scale in `_settings/spacing.scss`.";
+      + "responsive spacing scale in `_settings/spacing.scss`.";
   }
 
   // Make sure that the return value from `_settings/spacing.scss` is a map.
   $scale-map: map-get($govuk-spacing-responsive-scale, $responsive-spacing-point);
   $actual-map-type: type-of($scale-map);
+
   @if $actual-map-type != "map" {
     @error "Expected a number (integer), but got a "
-    + "#{$actual-map-type}. Make sure you are using a map to set the responsive spacing in `_settings/spacing.scss`)";
+      + "#{$actual-map-type}. Make sure you are using a map to set the responsive spacing in `_settings/spacing.scss`)";
   }
 
   // Loop through each breakpoint in the map
   @each $breakpoint, $breakpoint-value in $scale-map {
-
     @if ($adjustment) {
       $breakpoint-value: $breakpoint-value + $adjustment;
     }
 
     // The 'null' breakpoint is for mobile.
     @if $breakpoint == null {
-
       @if $direction == all {
         #{$property}: $breakpoint-value iff($important, !important);
-      } @else {
+      }
+
+      @else {
         #{$property}-#{$direction}: $breakpoint-value iff($important, !important);
       }
-    } @else {
+    }
+
+    @else {
       @include govuk-media-query($from: $breakpoint) {
         @if $direction == all {
           #{$property}: $breakpoint-value iff($important, !important);
-        } @else {
+        }
+
+        @else {
           #{$property}-#{$direction}: $breakpoint-value iff($important, !important);
         }
       }
@@ -145,7 +152,6 @@
 ///   }
 ///
 /// @access public
-
 
 @mixin govuk-responsive-padding($responsive-spacing-point, $direction: "all", $important: false, $adjustment: false) {
   @include _govuk-responsive-spacing($responsive-spacing-point, "padding", $direction, $important, $adjustment);
