--- a/src/govuk/objects/_grid.scss
+++ b/src/govuk/objects/_grid.scss
@@ -3,17 +3,16 @@
 @import "../helpers/all";
 
 @include govuk-exports("govuk/objects/grid") {
-
   .govuk-grid-row {
     @include govuk-clearfix;
+
     margin-right: - ($govuk-gutter-half);
     margin-left: - ($govuk-gutter-half);
   }
 
   @each $width in map-keys($govuk-grid-widths) {
     .govuk-grid-column-#{$width} {
-      @include govuk-grid-column($width)
-    }
+      @include govuk-grid-column($width); }
   }
 
   // These *must* be defined in a separate loop as they have the same
@@ -21,7 +20,6 @@
   // them in the outputted CSS
   @each $width in map-keys($govuk-grid-widths) {
     .govuk-grid-column-#{$width}-from-desktop {
-      @include govuk-grid-column($width, $at: desktop)
-    }
+      @include govuk-grid-column($width, $at: desktop); }
   }
 }
