--- a/src/govuk/settings/_colours-palette.scss
+++ b/src/govuk/settings/_colours-palette.scss
@@ -13,11 +13,15 @@
 /// @type Boolean
 /// @access public
 
-$govuk-use-legacy-palette: if((
+$govuk-use-legacy-palette: if(
+  (
     $govuk-compatibility-govukfrontendtoolkit or
     $govuk-compatibility-govuktemplate or
     $govuk-compatibility-govukelements
-  ), true, false) !default;
+  ),
+  true,
+  false
+) !default;
 
 /// Legacy colour palette
 ///
@@ -43,13 +47,12 @@ $_govuk-colour-palette-legacy: (
   "turquoise": #28a197,
   "light-blue": #2b8cc4,
   "blue": #005ea5,
-
   "black": #0b0c0c,
   "grey-1": #6f777b,
   "grey-2": #bfc1c3,
   "grey-3": #dee0e2,
   "grey-4": #f8f8f8,
-  "white": #ffffff
+  "white": #fff
 );
 
 /// Modern colour palette
@@ -62,19 +65,17 @@ $_govuk-colour-palette-legacy: (
 
 $_govuk-colour-palette-modern: (
   "red": #d4351c,
-  "yellow": #ffdd00,
+  "yellow": #fd0,
   "green": #00703c,
   "blue": #1d70b8,
   "dark-blue": #003078,
   "light-blue": #5694ca,
   "purple": #4c2c92,
-
   "black": #0b0c0c,
   "dark-grey": #626a6e,
   "mid-grey": #b1b4b6,
   "light-grey": #f3f2f1,
-  "white": #ffffff,
-
+  "white": #fff,
   "light-purple": #6f72af,
   "bright-purple": #912b88,
   "pink": #d53880,
