--- a/src/govuk/components/accordion/_accordion.scss
+++ b/src/govuk/components/accordion/_accordion.scss
@@ -2,7 +2,6 @@
 @import "../../tools/all";
 @import "../../helpers/all";
 
-
 @include govuk-exports("govuk/component/accordion") {
 
   $govuk-accordion-link-colour: $govuk-link-colour;
@@ -31,6 +30,7 @@
   // Buttons within the sections don’t need default styling
   .govuk-accordion__section-button {
     @include govuk-font($size: 24, $weight: bold);
+
     display: inline-block;
     margin-bottom: 0;
     padding-top: govuk-spacing(3);
@@ -48,7 +48,6 @@
 
   // JavaScript enabled
   .js-enabled {
-
     .govuk-accordion {
       // Border at the bottom of the whole accordion
       border-bottom: 1px solid $govuk-border-colour;
@@ -62,6 +61,7 @@
     // Hide the body of collapsed sections
     .govuk-accordion__section-content {
       display: none;
+
       @include govuk-responsive-padding(3, "top");
       @include govuk-responsive-padding(3, "bottom");
     }
@@ -74,6 +74,7 @@
     // This is styled to look like a link not a button
     .govuk-accordion__open-all {
       @include govuk-font($size: 16);
+
       position: relative;
       z-index: 1;
       margin: 0;
@@ -116,6 +117,7 @@
     // Buttons within the headers don’t need default styling
     .govuk-accordion__section-button {
       @include govuk-typography-common;
+
       margin-top: 0;
       margin-bottom: 0;
       margin-left: 0;
@@ -139,7 +141,7 @@
     }
 
     // Extend the touch area of the button to span the section header
-    .govuk-accordion__section-button:after {
+    .govuk-accordion__section-button::after {
       content: "";
       position: absolute;
       top: 0;
@@ -175,8 +177,8 @@
       margin-top: -8px;
     }
 
-    .govuk-accordion__icon:after,
-    .govuk-accordion__icon:before {
+    .govuk-accordion__icon::after,
+    .govuk-accordion__icon::before {
       content: "";
       box-sizing: border-box;
       position: absolute;
@@ -191,16 +193,16 @@
       background-color: govuk-colour("black");
     }
 
-    .govuk-accordion__icon:before {
+    .govuk-accordion__icon::before {
       width: 100%;
     }
 
-    .govuk-accordion__icon:after {
+    .govuk-accordion__icon::after {
       height: 100%;
     }
 
     // Vertical bar should be hidden when section is open, to display a '-' icon
-    .govuk-accordion__section--expanded .govuk-accordion__icon:after {
+    .govuk-accordion__section--expanded .govuk-accordion__icon::after {
       content: " ";
       display: none;
     }
