--- a/src/govuk/components/back-link/_back-link.scss
+++ b/src/govuk/components/back-link/_back-link.scss
@@ -3,7 +3,6 @@
 @import "../../helpers/all";
 
 @include govuk-exports("govuk/component/back-link") {
-
   .govuk-back-link {
     @include govuk-typography-responsive($size: 16);
     @include govuk-link-common;
@@ -11,7 +10,6 @@
 
     display: inline-block;
     position: relative;
-
     margin-top: govuk-spacing(3);
     margin-bottom: govuk-spacing(3);
 
@@ -36,30 +34,27 @@
   }
 
   // Prepend left pointing arrow
-  .govuk-back-link:before {
+  .govuk-back-link::before {
     @include govuk-shape-arrow($direction: left, $base: 10px, $height: 6px);
 
     content: "";
 
     // Vertically align with the parent element
     position: absolute;
-
     top: 0;
     bottom: 0;
     left: 0;
-
     margin: auto;
   }
 
   @if $govuk-use-legacy-font {
     // Begin adjustments for font baseline offset
     // These should be removed when legacy font support is dropped
-    .govuk-back-link:before {
+    .govuk-back-link::before {
       $offset: 1px;
 
       top: $offset * -1;
       bottom: $offset;
     }
   }
-
 }
