--- a/src/govuk/components/breadcrumbs/_breadcrumbs.scss
+++ b/src/govuk/components/breadcrumbs/_breadcrumbs.scss
@@ -36,24 +36,20 @@
   }
 
   .govuk-breadcrumbs__list-item {
-
     display: inline-block;
     position: relative;
-
     margin-bottom: govuk-spacing(1);
 
     // Add both margin and padding such that the chevron appears centrally
     // between each breadcrumb item
     margin-left: govuk-spacing(2);
     padding-left: govuk-spacing(2) + $chevron-altitude-calculated;
-
     float: left;
 
     // Create a chevron using a box with borders on two sides, rotated 45deg.
-    &:before {
+    &::before {
       content: "";
       display: block;
-
       position: absolute;
 
       @if $govuk-use-legacy-font {
@@ -61,8 +57,9 @@
         // These should be removed when legacy font support is dropped
         top: -1px;
         bottom: 1px;
+      }
 
-      } @else {
+      @else {
         top: 0;
         bottom: 0;
       }
@@ -70,14 +67,10 @@
       // Offset by the difference between the width of the non-rotated square
       // and its width when rotated
       left: (($chevron-altitude-calculated * -2) + $chevron-size + $chevron-border-width);
-
       width: $chevron-size;
       height: $chevron-size;
-
       margin: auto 0;
-
       transform: rotate(45deg);
-
       border: solid;
       border-width: $chevron-border-width $chevron-border-width 0 0;
       border-color: $chevron-border-colour;
@@ -100,7 +93,7 @@
       margin-left: 0;
       padding-left: 0;
 
-      &:before {
+      &::before {
         content: none;
         display: none;
       }
