--- a/src/govuk/components/checkboxes/_checkboxes.scss
+++ b/src/govuk/components/checkboxes/_checkboxes.scss
@@ -1,7 +1,6 @@
 @import "../../settings/all";
 @import "../../tools/all";
 @import "../../helpers/all";
-
 @import "../error-message/error-message";
 @import "../fieldset/fieldset";
 @import "../hint/hint";
@@ -19,12 +18,9 @@
 
     display: block;
     position: relative;
-
     min-height: $govuk-checkboxes-size;
-
     margin-bottom: govuk-spacing(2);
     padding-left: $govuk-checkboxes-size;
-
     clear: left;
   }
 
@@ -42,15 +38,12 @@
     // elements there.
     @include govuk-not-ie8 {
       position: absolute;
-
       z-index: 1;
       top: $input-offset * -1;
       left: $input-offset * -1;
-
       width: $govuk-touch-target-size;
       height: $govuk-touch-target-size;
       margin: 0;
-
       opacity: 0;
     }
 
@@ -95,22 +88,18 @@
   // rotated 45 degrees
   .govuk-checkboxes__label::after {
     content: "";
-
     position: absolute;
     top: 11px;
     left: 9px;
     width: 18px;
     height: 7px;
-
     transform: rotate(-45deg);
     border: solid;
     border-width: 0 0 $govuk-border-width $govuk-border-width;
     // Fix bug in IE11 caused by transform rotate (-45deg).
     // See: alphagov/govuk_elements/issues/518
     border-top-color: transparent;
-
     opacity: 0;
-
     background: transparent;
   }
 
@@ -138,7 +127,7 @@
   }
 
   .govuk-checkboxes__input:disabled + .govuk-checkboxes__label {
-    opacity: .5;
+    opacity: 0.5;
   }
 
   // =========================================================
@@ -157,6 +146,7 @@
 
   .govuk-checkboxes__conditional {
     @include govuk-responsive-margin(4, "bottom");
+
     margin-left: $conditional-margin-left;
     padding-left: $conditional-padding-left;
     border-left: $conditional-border-width solid $govuk-border-colour;
@@ -181,6 +171,7 @@
 
     .govuk-checkboxes__item {
       @include govuk-clearfix;
+
       min-height: 0;
       margin-bottom: 0;
       padding-left: $label-offset;
@@ -258,6 +249,7 @@
     // Align conditional reveals with small checkboxes
     .govuk-checkboxes__conditional {
       $margin-left: ($govuk-small-checkboxes-size / 2) - ($conditional-border-width / 2);
+
       margin-left: $margin-left;
       padding-left: $label-offset - ($margin-left + $conditional-border-width);
       clear: both;
@@ -280,8 +272,9 @@
     // and another that then applies the hover state [2].
     .govuk-checkboxes__item:hover .govuk-checkboxes__input:focus + .govuk-checkboxes__label::before {
       // sass-lint:disable indentation
-      box-shadow: 0 0 0 $govuk-focus-width $govuk-focus-colour, // 1
-                  0 0 0 $govuk-hover-width $govuk-hover-colour; // 2
+      box-shadow:
+        0 0 0 $govuk-focus-width $govuk-focus-colour, 
+              $govuk-hover-width $govuk-hover-colour; // 2
     }
 
     // For devices that explicitly don't support hover, don't provide a hover
