--- a/src/govuk/components/tag/_tag.scss
+++ b/src/govuk/components/tag/_tag.scss
@@ -4,7 +4,6 @@
 
 @include govuk-exports("govuk/component/tag") {
   .govuk-tag {
-
     display: inline-block;
 
     // When a user customises their colours often the background is removed,
@@ -12,11 +11,9 @@
     // https://accessibility.blog.gov.uk/2017/03/27/how-users-change-colours-on-websites/
     outline: 2px solid transparent;
     outline-offset: -2px;
-
     color: govuk-colour("white");
     background-color: govuk-colour("blue");
     letter-spacing: 1px;
-
     text-decoration: none;
     text-transform: uppercase;
 
@@ -25,12 +22,16 @@
       // We use intentionally uneven padding to make it balanced, this can be
       // removed using the version of the font that has a more common vertical spacing.
       @include govuk-font($size: 16, $weight: bold, $line-height: 1.25);
+
       padding-top: 4px;
       padding-right: 8px;
       padding-bottom: 1px;
       padding-left: 8px;
-    } @else {
+    }
+
+    @else {
       @include govuk-font($size: 16, $weight: bold, $line-height: 1);
+
       padding-top: 5px;
       padding-right: 8px;
       padding-bottom: 4px;
