--- a/src/govuk/helpers/_font-faces.scss
+++ b/src/govuk/helpers/_font-faces.scss
@@ -22,8 +22,9 @@
 
         @font-face {
           font-family: "GDS Transport";
-          src: govuk-font-url("light-94a07e06a1-v2.woff2") format("woff2"),
-               govuk-font-url("light-f591b13f7d-v2.woff") format("woff");
+          src:
+            govuk-font-url("light-94a07e06a1-v2.woff2") format("woff2"),
+            govuk-font-url("light-f591b13f7d-v2.woff") format("woff");
           font-weight: normal;
           font-style: normal;
           font-display: fallback;
@@ -31,8 +32,9 @@
 
         @font-face {
           font-family: "GDS Transport";
-          src: govuk-font-url("bold-b542beb274-v2.woff2") format("woff2"),
-               govuk-font-url("bold-affa96571d-v2.woff") format("woff");
+          src:
+            govuk-font-url("bold-b542beb274-v2.woff2") format("woff2"),
+            govuk-font-url("bold-affa96571d-v2.woff") format("woff");
           font-weight: bold;
           font-style: normal;
           font-display: fallback;
