--- a/src/govuk/helpers/_shape-arrow.scss
+++ b/src/govuk/helpers/_shape-arrow.scss
@@ -37,10 +37,8 @@
 
 @mixin govuk-shape-arrow($direction, $base, $height: null, $display: block) {
   display: $display;
-
   width: 0;
   height: 0;
-
   border-style: solid;
   border-color: transparent; // 1
 
@@ -52,25 +50,29 @@
 
   @if $direction == "up" {
     clip-path: polygon(50% 0%, 0% 100%, 100% 100%); // 3
-
     border-width: 0 $perpendicular $height $perpendicular;
     border-bottom-color: inherit; // 2
-  } @else if $direction == "right" {
-    clip-path: polygon(0% 0%, 100% 50%, 0% 100%); // 3
+  }
 
+  @else if $direction == "right" {
+    clip-path: polygon(0% 0%, 100% 50%, 0% 100%); // 3
     border-width: $perpendicular 0 $perpendicular $height;
     border-left-color: inherit; // 2
-  } @else if $direction == "down" {
-    clip-path: polygon(0% 0%, 50% 100%, 100% 0%); // 3
+  }
 
+  @else if $direction == "down" {
+    clip-path: polygon(0% 0%, 50% 100%, 100% 0%); // 3
     border-width: $height $perpendicular 0 $perpendicular;
     border-top-color: inherit; // 2
-  } @else if $direction == "left" {
-    clip-path: polygon(0% 50%, 100% 100%, 100% 0%); // 3
+  }
 
+  @else if $direction == "left" {
+    clip-path: polygon(0% 50%, 100% 100%, 100% 0%); // 3
     border-width: $perpendicular $height $perpendicular 0;
     border-right-color: inherit; // 2
-  } @else {
+  }
+
+  @else {
     @error "Invalid arrow direction: expected `up`, `right`, `down` or `left`, got `#{$direction}`";
   }
 }
