Add manual linting changes

--- a/src/govuk/components/summary-list/_summary-list.scss
+++ b/src/govuk/components/summary-list/_summary-list.scss
@@ -40,6 +40,7 @@
     }
   }
 
+  /* stylelint-disable-next-line no-duplicate-selectors */
   .govuk-summary-list__key,
   .govuk-summary-list__value,
   .govuk-summary-list__actions {
