--- a/src/govuk/helpers/_device-pixels.scss
+++ b/src/govuk/helpers/_device-pixels.scss
@@ -28,6 +28,7 @@
 /// @access public
 
 @mixin govuk-device-pixel-ratio($ratio: 2) {
+  /* stylelint-disable */
   @media only screen and (-webkit-min-device-pixel-ratio: $ratio),
     only screen and (min--moz-device-pixel-ratio: $ratio),
     only screen and (-o-min-device-pixel-ratio: #{($ratio*10)} / 10),
@@ -36,4 +37,5 @@
     only screen and (min-resolution: #{$ratio}dppx) {
     @content;
   }
+  /* stylelint-enable */
 }
