Add new hover states with thick underlines

--- a/src/govuk/components/breadcrumbs/_breadcrumbs.scss
+++ b/src/govuk/components/breadcrumbs/_breadcrumbs.scss
@@ -110,5 +110,10 @@
   .govuk-breadcrumbs__link {
     @include govuk-link-common;
     @include govuk-link-style-text;
+
+    &:hover:not(:focus) {
+      color: govuk-colour("black");
+      box-shadow: 0 -2px transparent, 0 4px govuk-colour("black");
+    }
   }
 }
